Bitgrit-Inc.-Machine-Learning-Competition-I

--- a/final_ML_submition.ipynb
+++ b/final_ML_submition.ipynb
@@ -11,7 +11,7 @@
    "source": [
     "### Bitgrit Inc., Machine Learning Competition-I\n",
     "\n",
-    "Manu Kohli\n",
+    "Yaghdev Paliwal\n",
     "\n",
     "The Problem is approached using following three algorithms\n",
     "1. Auto encoders &gt; focussed on using data containing expressive feelings such as joy, enjoy\n",
@@ -1511,7 +1511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
